--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -1,6 +1,6 @@
 -# frozen_string_literal: true
 .container-fluid
-  = simple_form_for(@course) do |f|
+  = simple_form_for(@entry) do |f|
     = f.error_notification
     = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
@@ -8,6 +8,7 @@
       = f.input :title
       = f.label :description
       = f.rich_text_area :description
+      %small= f.error :description, class: 'text-danger'
 
     .form-actions
       = f.button :submit
