user confirmation, trackable, letter_opener

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,10 +14,12 @@
         -#  = link_to activity_path, class: 'nav-link' do
         -#    .fa.fa-bell
         -#    Activities
-        -#  %li.nav-item{class: "#{'active font-weight-bold' if current_page?(users_path)}"}
-        -#    = link_to users_path, class: 'nav-link' do
-        -#      .fa.fa-user
-        -#      Users
+
+        -# TODO: Move to admin section
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(users_path)}"}
+          = link_to users_path, class: 'nav-link' do
+            .fa.fa-user
+            Users
       -# = render 'layouts/search'
       %ul.navbar-nav.mr-right
         %li.nav-item.dropdown
