--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -20,7 +20,7 @@
           = link_to users_path, class: 'nav-link' do
             .fa.fa-user
             Users
-      -# = render 'layouts/search'
+      = render 'layouts/search'
       %ul.navbar-nav.mr-right
         %li.nav-item.dropdown
           %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
