--- a/app/views/entries/new.html.haml
+++ b/app/views/entries/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New entry
-
-= render 'form'
+.card
+  .card-header
+    %h1 New entry
+  .card-body
+    = render 'form'
 
 = link_to 'Back', entries_path
