adding pundit, landing page text

--- a/app/views/entries/_entry.html.haml
+++ b/app/views/entries/_entry.html.haml
@@ -14,8 +14,8 @@
         .text-right
           .fa.fa-chalkboard-teacher
           = entry.user.username
-  -# - if policy(entry).edit?
-  .card-footer
-    = link_to 'Edit', edit_entry_path(entry), class: 'btn btn-sm btn-warning'
-    = link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' #if policy(entry).destroy?
+  - if policy(entry).edit?
+    .card-footer
+      = link_to 'Edit', edit_entry_path(entry), class: 'btn btn-sm btn-warning'
+      = link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' if policy(entry).destroy?
 
