--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -2,9 +2,10 @@
   .display-4
     gobbledygook
     %small (noun)
-  %mark gob·​ble·​dy·​gook | \ ˈgä-bəl-dē-ˌgu̇k  \
-  %br
-  %strong : wordy and generally unintelligible jargon
+  %lead
+    %mark gob·​ble·​dy·​gook | \ ˈgä-bəl-dē-ˌgu̇k  \
+  %lead
+    %strong : wordy and generally unintelligible jargon
   .p-4
   = render 'layouts/search'
 
