add username, some button styling

--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -11,4 +11,5 @@
       %small= f.error :description, class: 'text-danger'
 
     .form-actions
-      = f.button :submit
+      %p
+      = f.button :submit, class: 'btn btn-primary'
