--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -13,11 +13,11 @@
         = mail_to 'me@bueti-online.ch'
         .row
       .col-md-4
-        = link_to 'Privacy policy', '#'#privacy_policy_path
-        .row
-        = link_to 'Terms and conditions', '#'#terms_path
+        = link_to 'Privacy policy', privacy_policy_path
+        -#.row
+        -#= link_to 'Terms and conditions', '#'#terms_path
       .col-md-4
-        = link_to 'About', '#'#about_path
+        = link_to 'About', about_path
         .row
         .fa.fa-hashtag
         = link_to 'Twitter', 'https://twitter.com/gran_viaje'
