--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,8 +4,7 @@
   .container
     .row
       .col-md-4
-        Copyright
-        ©
+        .far.fa-copyright
         = Time.now.year
         Benjamin Buetikofer
         .row
@@ -13,10 +12,14 @@
         = mail_to 'me@bueti-online.ch'
         .row
       .col-md-4
+        .row
+        .fa.fa-file-contract
         = link_to 'Privacy policy', privacy_policy_path
         -#.row
         -#= link_to 'Terms and conditions', '#'#terms_path
       .col-md-4
+        .row
+        .fa.fa-info-circle
         = link_to 'About', about_path
         .row
         .fa.fa-hashtag
