--- a/app/views/layouts/_anonymous_menu.html.haml
+++ b/app/views/layouts/_anonymous_menu.html.haml
@@ -1,6 +1,6 @@
 %li.nav-item{class: "#{'active font-weight-bold' if current_page?(root_path)}"}
   = link_to root_path, class: 'nav-link' do
-    .far.fa-building
+    .fa.fa-building
     Home
   %li.nav-item{class: "#{'active font-weight-bold' if current_page?(entries_path)}"}
     = link_to entries_path, class: 'nav-link' do
