--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -1,3 +1,8 @@
+- content_for :og_header do
+  = tag("meta", property: "og:title", content: @entry.title)
+  = tag("meta", property: "og:description", content: strip_tags(@entry.description.to_plain_text))
+  -# = tag("meta", property: "og:image", content: asset_url("logos/logo-square-250x250.png"))
+
 = link_to 'Entries', entries_path
 \/
 = @entry.title
