--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 %nav.navbar.navbar-expand-lg.navbar-dark.bg-primary
-  %img{:alt => "", :height => "24", :src => asset_url("logo.png"), :width => "30"}
-  %a.navbar-brand{:href => "/"} Gobbledygook
+  %a.navbar-brand{:href => "/"}
+    %img{:alt => "", :height => "24", :src => asset_url("logo.png"), :width => "30"} Gobbledygook
   %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
     %span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
