update about text

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -6,15 +6,8 @@
 
 %h2 Background
 %p
-A few weeks ago I was talking to somebody in Customer Care at Ricardo to discuss how to handle certain requests.
-This discussion made me realize how much jargon we engineers are using when talking about work and how this is an obstacle for other people to understand what we do or even to get into this field of work.
+  A few weeks ago I was discussing with a customer care agent at Ricardo how to handle certain requests. This discussion made me realize how much jargon we engineers are using when talking about work and how this is an obstacle for other people to understand what we do, but also it’s a hurdle for newcomers to get into this field of work.
 %p
-Every week I craft a little post in the General-Channel at work summarizing what the SRE team achieved the last week and what we were working on.
-Ever since I started doing this, I got pretty positive feedback about it. However, I also often got the feedback from non-engineers that the language used is very domain specific and hard to understand.
-Apart from trying to use a more approachable language, a few weeks ago I started to write short explanations for terms we are using all the time.
-In my spare time, I am working on
-= link_to 'iOverlander', 'https://ioverlander.com'
-*. This service is running on Ruby on Rails and I wanted to get more familiar (again) with Rails, so I was looking for a little project to create - and this is the result.
-
-%hr
-  * iOverlander is a tool, by and for overlanders, which enables its users to submit, amend and find information and opinions, primarily about places that are essential for the act of overlanding, and secondarily non-essential places that are of interest to a significant group of overlanders.
+  Part of the engineering culture at Ricardo is to openly share what we’ve learned and transparency. Because of that every Monday I craft a summary post in our general Slack channel summarizing what the SRE team achieved, what were are working on, and what we’ve learned. People appreciate the insights into SRE but I also often got the feedback from that the language used is very domain specific and hard to understand. Apart from trying to use a more approachable language in general, I started to write short explanations for terms we are using as part of this newsletter.
+%p
+  I’ve been looking for a little project to refresh my Rails knowledge for a while and this seemed like a good idea, thus the idea for Gobbledygook was born. I hope that this (albeit small) collection of jargon explained might be useful for others.
