--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -13,3 +13,5 @@
     .form-actions
       %p
       = f.button :submit, class: 'btn btn-primary'
+      = hidden_field_tag :authenticity_token, form_authenticity_token
+      = f.button :submit, 'Save Draft', class: 'btn btn-warning', formaction: create_draft_entries_path
