--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,10 +11,6 @@
           = link_to new_entry_path, class: 'nav-link' do
             .fa.fa-plus
             New Entry
-        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_entry_path)}"}
-          = link_to '#', class: 'nav-link' do
-            .fas.fa-portrait
-            My Entries
       = render 'layouts/search'
       %ul.navbar-nav.mr-right
         - if current_user&.has_role?(:admin)
@@ -22,6 +18,10 @@
             = link_to users_path, class: 'nav-link' do
               .fa.fa-user
               Users
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_entry_path)}"}
+          = link_to drafts_entries_path, class: 'nav-link' do
+            .fas.fa-portrait
+            My Entries
         %li.nav-item.dropdown
           %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             %b= current_user.email
