drafts feature finished

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,7 +19,7 @@
               .fa.fa-user
               Users
         %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_entry_path)}"}
-          = link_to drafts_entries_path, class: 'nav-link' do
+          = link_to personal_entries_path, class: 'nav-link' do
             .fas.fa-portrait
             My Entries
         %li.nav-item.dropdown
