--- a/app/views/entries/_entry.html.haml
+++ b/app/views/entries/_entry.html.haml
@@ -1,7 +1,10 @@
 .card
   .card-header
     .fa.fa-graduation-cap
+
     = link_to entry.title, entry_path(entry)
+    - if entry.draft?
+      %span.badge.badge-info Draft
   .card-body
     = entry.description
 
@@ -16,7 +19,6 @@
           = entry.user.username
   - if policy(entry).edit?
     .card-footer
-      = link_to 'Publish', '#', class: 'btn btn-sm btn-primary' if entry.draft
       = link_to 'Edit', edit_entry_path(entry), class: 'btn btn-sm btn-warning'
       = link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' if policy(entry).destroy?
 
